--- a/index.html
+++ b/index.html
@@ -2,3 +2,4 @@
 <h2> welcome to reddy technologies pvt ltd</h2>
 <h3>banglore marthahalli 560037</h3>
 <h4> we are teaching devops classes</h4>
+<h5> we will provide placement assistance too</h5>
