--- a/index.html
+++ b/index.html
@@ -3,3 +3,4 @@
 <h3>banglore marthahalli 560037</h3>
 <h4> we are teaching devops classes</h4>
 <h5> we will provide placement assistance too</h5>
+<h6> my best friend is basha</h6>
